--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "htttp://Abdullatif-Ahmed.github.io/Booking",
+  "homepage": "http://Abdullatif-Ahmed.github.io/Booking",
   "name": "booking",
   "version": "0.1.0",
   "private": true,
@@ -26,8 +26,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
