--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "sass": "^1.56.1",
     "slick-carousel": "^1.8.1"
   },
+  "devDependencies": {
+    "web-vitals": "^2.1.4"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
