--- a/package.json
+++ b/package.json
@@ -4,28 +4,29 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "axios": "^1.2.1",
-    "bootstrap": "^5.2.3",
-    "date-fns": "^2.29.3",
-    "firebase": "^9.15.0",
+    "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
+    "date-fns": "^2.30.0",
+    "firebase": "^10.8.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.6.0",
-    "react-countup": "^6.4.0",
+    "react-bootstrap": "^2.10.1",
+    "react-countup": "^6.5.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
-    "react-error-boundary": "^3.1.4",
-    "react-icons": "^4.7.1",
-    "react-loader-spinner": "^5.3.4",
+    "react-error-boundary": "^4.0.12",
+    "react-icons": "^5.0.1",
+    "react-loader-spinner": "^6.1.6",
     "react-placeholder-loading": "^0.5.30",
-    "react-router": "^6.4.4",
-    "react-router-dom": "^6.4.4",
+    "react-router": "^6.22.1",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "^5.0.1",
-    "react-slick": "^0.29.0",
-    "sass": "^1.56.1",
+    "react-slick": "^0.30.2",
+    "sass": "^1.71.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
-    "web-vitals": "^2.1.4"
+    "terser": "^3.14.1",
+    "web-vitals": "^3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
